# AuthBackend

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/authbackend/: backends.py  email_thread.py  renderers.py  settings.py  urls.py  utils.py
src/authentication/: admin.py  forms.py  manager.py  models.py  queryset.py  serializers.py  signals.py  urls.py  utils.py  views.py
src/authentication/migrations/: 0001_initial.py  0002_alter_user_country_code.py  0003_userprofile.py  0004_alter_userprofile_address.py
